# cekdulu

./: .env.example  .gitignore  DEPLOYMENT_SUMMARY.md  FEATURE_COMPLETE.md  IMPORT_FEATURE.md  README.md  TESTING_GUIDE.md  cekdulu_price_comparison_platform.html  docker-compose.yml  package-lock.json  package.json  temp_scrape_body.json  tsconfig.base.json  turbo.json
.turbo/cache/: 28d84009415774ac-manifest.json  28d84009415774ac-meta.json  28d84009415774ac.tar.zst  45fd6a19fc61782c-manifest.json  45fd6a19fc61782c-meta.json  76df3c266a380c82-manifest.json  76df3c266a380c82-meta.json  994bf0ba53e2283c-manifest.json  994bf0ba53e2283c-meta.json  994bf0ba53e2283c.tar.zst  bbe12af24c8d6dc7-manifest.json  bbe12af24c8d6dc7-meta.json  e72b2f95b661303b-manifest.json  e72b2f95b661303b-meta.json  e72b2f95b661303b.tar.zst
apps/api/: package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/api/src/: app.module.ts  main.ts
apps/scraper/: README.md  pyproject.toml
apps/scraper/src/cekdulu_scraper/: main.py  matching.py  models.py  proxies.py  queue.py  scheduler.py  server.py  settings.py  tracking.py
apps/scraper/src/cekdulu_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/scraper/src/cekdulu_scraper/workers/: base.py  blibli.py  bukalapak.py  lazada.py  shopee.py  tiktok.py  tokopedia.py
apps/web/: AUTH_README.md  next.config.mjs  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
docs/: architecture.md  deployment.md
infra/docker/: .dockerignore  api.Dockerfile  scraper.Dockerfile  web.Dockerfile
infra/nginx/: nginx.conf
(+110 files in other folders)
