[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cekdulu-scraper"
version = "0.1.0"
description = "Async scraping engine for CekDulu"
requires-python = ">=3.12"
dependencies = [
  "aio-pika>=9.4.3",
  "beautifulsoup4>=4.12.3",
  "httpx>=0.27.2",
  "orjson>=3.10.12",
  "playwright>=1.49.1",
  "pydantic>=2.10.3",
  "pydantic-settings>=2.7.0",
  "python-slugify>=8.0.4",
  "tenacity>=9.0.0",
  "fastapi>=0.95.0",
  "uvicorn[standard]>=0.20.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
